# oxide

./: .gitignore  Cargo.toml  LICENSE  README.md  rust-toolchain.toml  rustc-ice-2026-04-06T12_14_08-58902.txt  rustc-ice-2026-04-06T12_17_40-58953.txt  rustc-ice-2026-04-06T12_19_23-59030.txt  rustc-ice-2026-04-06T12_22_00-60148.txt  rustc-ice-2026-04-06T12_30_09-60200.txt  rustc-ice-2026-04-06T12_30_34-60232.txt  rustc-ice-2026-04-06T12_30_38-60257.txt  rustc-ice-2026-04-06T12_30_44-60279.txt  rustc-ice-2026-04-06T12_36_32-61332.txt  rustc-ice-2026-04-06T12_36_50-61480.txt  rustc-ice-2026-04-06T12_36_54-61524.txt  rustc-ice-2026-04-06T12_37_04-61550.txt  rustc-ice-2026-04-06T13_18_58-62024.txt  rustc-ice-2026-04-06T13_18_58-62025.txt  rustc-ice-2026-04-06T13_19_23-62056.txt  rustc-ice-2026-04-06T13_19_28-62082.txt  rustc-ice-2026-04-06T13_19_32-62105.txt  rustc-ice-2026-04-06T13_19_37-62129.txt  rustc-ice-2026-04-06T13_20_14-62161.txt  rustc-ice-2026-04-06T13_30_15-62610.txt  rustc-ice-2026-04-06T13_30_15-62611.txt
src/: lib.rs
src/builtins/: array.rs  console.rs  json.rs  math.rs  mod.rs  native.rs  number.rs  object.rs  promise.rs  string.rs
src/compiler/: codegen.rs  mod.rs  opcode.rs
src/gc/: mod.rs
src/heap/: arena.rs  closure.rs  mod.rs  object.rs  prototype.rs  value.rs
src/runtime/: event_loop.rs  mod.rs  promise.rs
src/vm/: eval.rs  exception.rs  frame.rs  mod.rs
tests/: smoke.rs
